base_layer/wallet_ffi/wallet.h

struct ByteVector;
struct EmojiSet;
struct FeePerGramStat;
struct FeePerGramStatsResponse;
struct TaijiWallet;
/**
 * Define the explicit Public key implementation for the Taiji base layer
 */
typedef struct RistrettoPublicKey PublicKey;
typedef PublicKey TaijiPublicKey;
typedef struct FeePerGramStatsResponse TaijiFeePerGramStats;
typedef struct FeePerGramStat TaijiFeePerGramStat;
/**
 * Creates a TaijiWallet
 *
 * ## Arguments
 * `config` - The TaijiCommsConfig pointer
 * `log_path` - An optional file path to the file where the logs will be written. If no log is required pass *null*
 * pointer.
 * `num_rolling_log_files` - Specifies how many rolling log files to produce, if no rolling files are wanted then set
 * this to 0
 * `size_per_log_file_bytes` - Specifies the size, in bytes, at which the logs files will roll over, if no
 * rolling files are wanted then set this to 0
 * `passphrase` - An optional string that represents the passphrase used to
 * encrypt/decrypt the databases for this wallet. If it is left Null no encryption is used. If the databases have been
 * encrypted then the correct passphrase is required or this function will fail.
 * `seed_words` - An optional instance of TaijiSeedWords, used to create a wallet for recovery purposes.
 * If this is null, then a new master key is created for the wallet.
 * `callback_received_transaction` - The callback function pointer matching the function signature. This will be
 * called when an inbound transaction is received.
 * `callback_received_transaction_reply` - The callback function
 * pointer matching the function signature. This will be called when a reply is received for a pending outbound
 * transaction
 * `callback_received_finalized_transaction` - The callback function pointer matching the function
 * signature. This will be called when a Finalized version on an Inbound transaction is received
 * `callback_transaction_broadcast` - The callback function pointer matching the function signature. This will be
 * called when a Finalized transaction is detected a Broadcast to a base node mempool.
 * `callback_transaction_mined` - The callback function pointer matching the function signature. This will be called
 * when a Broadcast transaction is detected as mined AND confirmed.
 * `callback_transaction_mined_unconfirmed` - The callback function pointer matching the function signature. This will
 * be called when a Broadcast transaction is detected as mined but not yet confirmed.
 * `callback_faux_transaction_confirmed` - The callback function pointer matching the function signature. This will be
 * called when a one-sided transaction is detected as mined AND confirmed.
 * `callback_faux_transaction_unconfirmed` - The callback function pointer matching the function signature. This
 * will be called when a one-sided transaction is detected as mined but not yet confirmed.
 * `callback_transaction_send_result` - The callback function pointer matching the function signature. This is called
 * when a transaction send is completed. The first parameter is the transaction id and the second contains the
 * transaction send status, weather it was send direct and/or send via saf on the one hand or queued for further retry
 * sending on the other hand.
 *     !direct_send & !saf_send &  queued   = 0
 *      direct_send &  saf_send & !queued   = 1
 *      direct_send & !saf_send & !queued   = 2
 *     !direct_send &  saf_send & !queued   = 3
 *     any other combination (is not valid) = 4
 * `callback_transaction_cancellation` - The callback function pointer matching
 * the function signature. This is called when a transaction is cancelled. The first parameter is a pointer to the
 * cancelled transaction, the second is a reason as to why said transaction failed that is mapped to the
 * `TxCancellationReason` enum: pub enum TxCancellationReason {
 *     Unknown,                // 0
 *     UserCancelled,          // 1
 *     Timeout,                // 2
 *     DoubleSpend,            // 3
 *     Orphan,                 // 4
 *     TimeLocked,             // 5
 *     InvalidTransaction,     // 6
 * }
 * `callback_txo_validation_complete` - The callback function pointer matching the function signature. This is called
 * when a TXO validation process is completed. The request_key is used to identify which request this
 * callback references and the second parameter the second contains, weather it was successful, already busy, failed
 * due to an internal failure or failed due to a communication failure.
 *     TxoValidationSuccess,               // 0
 *     TxoValidationAlreadyBusy            // 1
 *     TxoValidationInternalFailure        // 2
 *     TxoValidationCommunicationFailure   // 3
 * `callback_contacts_liveness_data_updated` - The callback function pointer matching the function signature. This is
 * called when a contact's liveness status changed. The data represents the contact's updated status information.
 * `callback_balance_updated` - The callback function pointer matching the function signature. This is called whenever
 * the balance changes.
 * `callback_transaction_validation_complete` - The callback function pointer matching the function signature. This is
 * called when a Transaction validation process is completed. The request_key is used to identify which request this
 * callback references and the second parameter is a u64 that returns if the validation was successful or not.
 *         ValidationSuccess,               // 0
 *         ValidationAlreadyBusy            // 1
 *         ValidationInternalFailure        // 2
 *         ValidationCommunicationFailure   // 3
 * `callback_saf_message_received` - The callback function pointer that will be called when the Dht has determined that
 * is has connected to enough of its neighbours to be confident that it has received any SAF messages that were waiting
 * for it.
 * `callback_connectivity_status` -  This callback is called when the status of connection to the set base node
 * changes. it will return an enum encoded as an integer as follows:
 * pub enum OnlineStatus {
 *     Connecting,     // 0
 *     Online,         // 1
 *     Offline,        // 2
 * }
 * `recovery_in_progress` - Pointer to an bool which will be modified to indicate if there is an outstanding recovery
 * that should be completed or not to an error code should one occur, may not be null. Functions as an out parameter.
 * `error_out` - Pointer to an int which will be modified
 * to an error code should one occur, may not be null. Functions as an out parameter.
 * ## Returns
 * `*mut TaijiWallet` - Returns a pointer to a TaijiWallet, note that it returns ptr::null_mut()
 * if config is null, a wallet error was encountered or if the runtime could not be created
 *
 * # Safety
 * The ```wallet_destroy``` method must be called when finished with a TaijiWallet to prevent a memory leak
 */
struct TaijiWallet *wallet_create(TaijiCommsConfig *config,
                                  const char *log_path,
                                  unsigned int num_rolling_log_files,
                                  unsigned int size_per_log_file_bytes,
                                  const char *passphrase,
                                  const struct TaijiSeedWords *seed_words,
                                  const char *network_str,
                                  void (*callback_received_transaction)(TaijiPendingInboundTransaction*),
                                  void (*callback_received_transaction_reply)(TaijiCompletedTransaction*),
                                  void (*callback_received_finalized_transaction)(TaijiCompletedTransaction*),
                                  void (*callback_transaction_broadcast)(TaijiCompletedTransaction*),
                                  void (*callback_transaction_mined)(TaijiCompletedTransaction*),
                                  void (*callback_transaction_mined_unconfirmed)(TaijiCompletedTransaction*,
                                                                                 uint64_t),
                                  void (*callback_faux_transaction_confirmed)(TaijiCompletedTransaction*),
                                  void (*callback_faux_transaction_unconfirmed)(TaijiCompletedTransaction*,
                                                                                uint64_t),
                                  void (*callback_transaction_send_result)(unsigned long long,
                                                                           TaijiTransactionSendStatus*),
                                  void (*callback_transaction_cancellation)(TaijiCompletedTransaction*,
                                                                            uint64_t),
                                  void (*callback_txo_validation_complete)(uint64_t, uint64_t),
                                  void (*callback_contacts_liveness_data_updated)(TaijiContactsLivenessData*),
                                  void (*callback_balance_updated)(TaijiBalance*),
                                  void (*callback_transaction_validation_complete)(uint64_t,
                                                                                   uint64_t),
                                  void (*callback_saf_messages_received)(void),
                                  void (*callback_connectivity_status)(uint64_t),
                                  void (*callback_base_node_state)(struct TaijiBaseNodeState*),
                                  bool *recovery_in_progress,
                                  int *error_out);
/**
 * Starts the Wallet recovery process.
 *
 * ## Arguments
 * `wallet` - The TaijiWallet pointer.
 * `base_node_public_key` - The TaijiPublicKey pointer of the Base Node the recovery process will use
 * `recovery_progress_callback` - The callback function pointer that will be used to asynchronously communicate
 * progress to the client. The first argument of the callback is an event enum encoded as a u8 as follows:
 * ```
 * enum RecoveryEvent {
 *     ConnectingToBaseNode,       // 0
 *     ConnectedToBaseNode,        // 1
 *     ConnectionToBaseNodeFailed, // 2
 *     Progress,                   // 3
 *     Completed,                  // 4
 *     ScanningRoundFailed,        // 5
 *     RecoveryFailed,             // 6
 * }
 * ```
 * The second and third arguments are u64 values that will contain different information depending on the event
 * that triggered the callback. The meaning of the second and third argument for each event are as follows:
 *     - ConnectingToBaseNode, 0, 0
 *     - ConnectedToBaseNode, 0, 1
 *     - ConnectionToBaseNodeFailed, number of retries, retry limit
 *     - Progress, current block, total number of blocks
 *     - Completed, total number of UTXO's recovered, MicroMinotaiji recovered,
 *     - ScanningRoundFailed, number of retries, retry limit
 *     - RecoveryFailed, 0, 0
 *
 * If connection to a base node is successful the flow of callbacks should be:
 *     - The process will start with a callback with `ConnectingToBaseNode` showing a connection is being attempted
 *       this could be repeated multiple times until a connection is made.
 *     - The next a callback with `ConnectedToBaseNode` indicate a successful base node connection and process has
 *       started
 *     - In Progress callbacks will be of the form (n, m) where n < m
 *     - If the process completed successfully then the final `Completed` callback will return how many UTXO's were
 *       scanned and how much MicroMinotaiji was recovered
 *     - If there is an error in the connection process then the `ConnectionToBaseNodeFailed` will be returned
 *     - If there is a minor error in scanning then `ScanningRoundFailed` will be returned and another connection/sync
 *       attempt will be made
 *     - If a unrecoverable error occurs the `RecoveryFailed` event will be returned and the client will need to start
 *       a new process.
 *
 * `recovered_output_message` - A string that will be used as the message for any recovered outputs. If Null the
 * default     message will be used
 *
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `bool` - Return a boolean value indicating whether the process started successfully or not, the process will
 * continue to run asynchronously and communicate it progress via the callback. An error will also produce a false
 * result.
 *
 * # Safety
 * None
 */
bool wallet_start_recovery(struct TaijiWallet *wallet,
                           TaijiPublicKey *base_node_public_key,
                           void (*recovery_progress_callback)(uint8_t, uint64_t, uint64_t),
                           const char *recovered_output_message,
                           int *error_out);
/**
 * Set the text message that is applied to a detected One-Side payment transaction when it is scanned from the
 * blockchain
 *
 * ## Arguments
 * `wallet` - The TaijiWallet pointer.
 * `message` - The pointer to a Utf8 string representing the Message
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `bool` - Return a boolean value indicating the operation's success or failure. The error_ptr will hold the error
 * code if there was a failure
 *
 * # Safety
 * None
 */
bool wallet_set_one_sided_payment_message(struct TaijiWallet *wallet,
                                          const char *message,
                                          int *error_out);
/**
 * Gets the current emoji set
 *
 * ## Arguments
 * `()` - Does not take any arguments
 *
 * ## Returns
 * `*mut EmojiSet` - Pointer to the created EmojiSet.
 *
 * # Safety
 * The ```emoji_set_destroy``` function must be called when finished with a ByteVector to prevent a memory leak
 */
struct EmojiSet *get_emoji_set(void);
/**
 * Gets the length of the current emoji set
 *
 * ## Arguments
 * `*mut EmojiSet` - Pointer to emoji set
 *
 * ## Returns
 * `c_int` - Pointer to the created EmojiSet.
 *
 * # Safety
 * None
 */
unsigned int emoji_set_get_length(const struct EmojiSet *emoji_set, int *error_out);
/**
 * Gets a ByteVector at position in a EmojiSet
 *
 * ## Arguments
 * `emoji_set` - The pointer to a EmojiSet
 * `position` - The integer position
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `ByteVector` - Returns a ByteVector. Note that the ByteVector will be null if ptr
 * is null or if the position is invalid
 *
 * # Safety
 * The ```byte_vector_destroy``` function must be called when finished with the ByteVector to prevent a memory leak.
 */
struct ByteVector *emoji_set_get_at(const struct EmojiSet *emoji_set,
                                    unsigned int position,
                                    int *error_out);
/**
 * Frees memory for a EmojiSet
 *
 * ## Arguments
 * `emoji_set` - The EmojiSet pointer
 *
 * ## Returns
 * `()` - Does not return a value, equivalent to void in C
 *
 * # Safety
 * None
 */
void emoji_set_destroy(struct EmojiSet *emoji_set);
/**
 * Frees memory for a TaijiWallet
 *
 * ## Arguments
 * `wallet` - The TaijiWallet pointer
 *
 * ## Returns
 * `()` - Does not return a value, equivalent to void in C
 *
 * # Safety
 * None
 */
void wallet_destroy(struct TaijiWallet *wallet);
/**
 * This function will log the provided string at debug level. To be used to have a client log messages to the LibWallet
 * logs.
 *
 * ## Arguments
 * `msg` - A string that will be logged at the debug level. If msg is null nothing will be done.
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * # Safety
 * None
 */
void log_debug_message(const char *msg,
                       int *error_out);
/**
 * ------------------------------------- FeePerGramStats ------------------------------------ ///
 * Get the TaijiFeePerGramStats from a TaijiWallet.
 *
 * ## Arguments
 * `wallet` - The TaijiWallet pointer
 * `count` - The maximum number of blocks to be checked
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter
 *
 * ## Returns
 * `*mut TaijiCompletedTransactions` - returns the transactions, note that it returns ptr::null_mut() if
 * wallet is null or an error is encountered.
 *
 * # Safety
 * The ```fee_per_gram_stats_destroy``` method must be called when finished with a TaijiFeePerGramStats to prevent
 * a memory leak.
 */
TaijiFeePerGramStats *wallet_get_fee_per_gram_stats(struct TaijiWallet *wallet,
                                                    unsigned int count,
                                                    int *error_out);
/**
 * Get length of stats from the TaijiFeePerGramStats.
 *
 * ## Arguments
 * `fee_per_gram_stats` - The pointer to a TaijiFeePerGramStats
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter
 *
 * ## Returns
 * `c_uint` - length of stats in TaijiFeePerGramStats
 *
 * # Safety
 * None
 */
unsigned int fee_per_gram_stats_get_length(TaijiFeePerGramStats *fee_per_gram_stats,
                                           int *error_out);
/**
 * Get TaijiFeePerGramStat at position from the TaijiFeePerGramStats.
 *
 * ## Arguments
 * `fee_per_gram_stats` - The pointer to a TaijiFeePerGramStats.
 * `position` - The integer position.
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `*mut TaijiCompletedTransactions` - returns the TaijiFeePerGramStat, note that it returns ptr::null_mut() if
 * fee_per_gram_stats is null or an error is encountered.
 *
 * # Safety
 * The ```fee_per_gram_stat_destroy``` method must be called when finished with a TaijiCompletedTransactions to 4prevent
 * a memory leak.
 */
TaijiFeePerGramStat *fee_per_gram_stats_get_at(TaijiFeePerGramStats *fee_per_gram_stats,
                                               unsigned int position,
                                               int *error_out);
/**
 * Frees memory for a TaijiFeePerGramStats
 *
 * ## Arguments
 * `fee_per_gram_stats` - The TaijiFeePerGramStats pointer
 *
 * ## Returns
 * `()` - Does not return a value, equivalent to void in C
 *
 * # Safety
 * None
 */
void fee_per_gram_stats_destroy(TaijiFeePerGramStats *fee_per_gram_stats);
/**
 * ------------------------------------------------------------------------------------------ ///
 * ------------------------------------- FeePerGramStat ------------------------------------- ///
 * Get the order of TaijiFeePerGramStat
 *
 * ## Arguments
 * `fee_per_gram_stats` - The TaijiFeePerGramStat pointer
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `c_ulonglong` - Returns order
 *
 * # Safety
 * None
 */
unsigned long long fee_per_gram_stat_get_order(TaijiFeePerGramStat *fee_per_gram_stat,
                                               int *error_out);
/**
 * Get the minimum fee per gram of TaijiFeePerGramStat
 *
 * ## Arguments
 * `fee_per_gram_stats` - The TaijiFeePerGramStat pointer
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `c_ulonglong` - Returns minimum fee per gram
 *
 * # Safety
 * None
 */
unsigned long long fee_per_gram_stat_get_min_fee_per_gram(TaijiFeePerGramStat *fee_per_gram_stat,
                                                          int *error_out);
/**
 * Get the average fee per gram of TaijiFeePerGramStat
 *
 * ## Arguments
 * `fee_per_gram_stats` - The TaijiFeePerGramStat pointer
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `c_ulonglong` - Returns average fee per gram
 *
 * # Safety
 * None
 */
unsigned long long fee_per_gram_stat_get_avg_fee_per_gram(TaijiFeePerGramStat *fee_per_gram_stat,
                                                          int *error_out);
/**
 * Get the maximum fee per gram of TaijiFeePerGramStat
 *
 * ## Arguments
 * `fee_per_gram_stats` - The TaijiFeePerGramStat pointer
 * `error_out` - Pointer to an int which will be modified to an error code should one occur, may not be null. Functions
 * as an out parameter.
 *
 * ## Returns
 * `c_ulonglong` - Returns maximum fee per gram
 *
 * # Safety
 * None
 */
unsigned long long fee_per_gram_stat_get_max_fee_per_gram(TaijiFeePerGramStat *fee_per_gram_stat,
                                                          int *error_out);
/**
 * Frees memory for a TaijiFeePerGramStat
 *
 * ## Arguments
 * `fee_per_gram_stats` - The TaijiFeePerGramStat pointer
 *
 * ## Returns
 * `()` - Does not return a value, equivalent to void in C
 *
 * # Safety
 * None
 */
void fee_per_gram_stat_destroy(TaijiFeePerGramStat *fee_per_gram_stat);