integration_tests/src/ffi/ffi_import.rs

    pub fn wallet_start_recovery(
        wallet: *mut TaijiWallet,
        base_node_public_key: *mut TaijiPublicKey,
        recovery_progress_callback: unsafe extern "C" fn(u8, u64, u64),
        recovered_output_message: *const c_char,
        error_out: *mut c_int,
    ) -> bool;
    pub fn wallet_set_one_sided_payment_message(
        wallet: *mut TaijiWallet,
        message: *const c_char,
        error_out: *mut c_int,
    ) -> bool;
    pub fn get_emoji_set() -> *mut EmojiSet;
    pub fn emoji_set_get_length(emoji_set: *const EmojiSet, error_out: *mut c_int) -> c_uint;
    pub fn emoji_set_get_at(emoji_set: *const EmojiSet, position: c_uint, error_out: *mut c_int) -> *mut ByteVector;
    pub fn emoji_set_destroy(emoji_set: *mut EmojiSet);
    pub fn wallet_destroy(wallet: *mut TaijiWallet);
    pub fn log_debug_message(msg: *const c_char, error_out: *mut c_int);
    pub fn wallet_get_fee_per_gram_stats(
        wallet: *mut TaijiWallet,
        count: c_uint,
        error_out: *mut c_int,
    ) -> *mut TaijiFeePerGramStats;
    pub fn fee_per_gram_stats_get_length(fee_per_gram_stats: *mut TaijiFeePerGramStats, error_out: *mut c_int)
        -> c_uint;
    pub fn fee_per_gram_stats_get_at(
        fee_per_gram_stats: *mut TaijiFeePerGramStats,
        position: c_uint,
        error_out: *mut c_int,
    ) -> *mut TaijiFeePerGramStat;
    pub fn fee_per_gram_stats_destroy(fee_per_gram_stats: *mut TaijiFeePerGramStats);
    pub fn fee_per_gram_stat_get_order(
        fee_per_gram_stat: *mut TaijiFeePerGramStat,
        error_out: *mut c_int,
    ) -> c_ulonglong;
    pub fn fee_per_gram_stat_get_min_fee_per_gram(
        fee_per_gram_stat: *mut TaijiFeePerGramStat,
        error_out: *mut c_int,
    ) -> c_ulonglong;
    pub fn fee_per_gram_stat_get_avg_fee_per_gram(
        fee_per_gram_stat: *mut TaijiFeePerGramStat,
        error_out: *mut c_int,
    ) -> c_ulonglong;
    pub fn fee_per_gram_stat_get_max_fee_per_gram(
        fee_per_gram_stat: *mut TaijiFeePerGramStat,
        error_out: *mut c_int,
    ) -> c_ulonglong;
    pub fn fee_per_gram_stat_destroy(fee_per_gram_stat: *mut TaijiFeePerGramStat);
}
